ignore generated copy of the readMilleBinary script

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,11 @@
 # ignore pede executable
 /pede
 
+# ignore readMilleBinary executable
+/readMilleBinary
+
+# ignore default installation directory
+bin
+
 # ignore editor backups
 *.bck
