--- a/src/pede/CMakeLists.txt
+++ b/src/pede/CMakeLists.txt
@@ -1,3 +1,6 @@
 add_executable(pede pede.f90)
 target_link_libraries(pede PUBLIC millepede mille)
-target_compile_options(pede PUBLIC -DREAD_C_FILES)
+if(SUPPORT_READ_C)
+  message(STATUS "READ_C is supported")
+  target_compile_definitions(pede PUBLIC -DREAD_C_FILES)
+endif()
